# 3d-orientation-model

./: .gitignore  CMakeLists.txt  main.c
cortex/: cortex.c  cortex.h
person/: person.c  person.h
receptors/: receptor.c  receptor.h
thalamus/: thalamus.c  thalamus.h
world/: world.c  world.h
